ci: fix test for java 17